# panda-smolvla-simulation

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: smolvla-offline-finetuning.ipynb  smolvla_deployment.ipynb
