[project]
name = "panda-smolvla-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "ffmpeg>=1.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "num2words>=0.5.14",
    "panda-gym>=3.0.7",
    "python-dotenv>=1.1.1",
    "torch>=2.7.1",
    "transformers>=4.54.1",
]
